# penpal

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  playbook.yml
.github/workflows/: ci.yml  publish-pypi.yml
.pi/: penpal-extension.ts
docs/: ARCHITECTURE.md  CONTRACTS.md  EVAL_CASES.json  HARNESS_STRATEGY.md  INTELLIGENCE_LOOP.md  MCP_ADAPTER.md  PI_ADAPTER.md  PI_PACKAGE_DISTRIBUTION.md  PRODUCT_PRINCIPLES.md  RELEASE_NOTES.md  ROADMAP.md  SERVICE_MODULES.md  SETUP.md  SOURCE_FACTS.json  SOURCE_POLICY.md  SOURCE_REGISTRY.md  SOURCE_SEEDS.json  V1_PLAN.md  V1_RELEASE_CHECKLIST.md
examples/pi/: OPERATOR_APPROVAL.md  README.md  demo-http-nmap.xml  demo-nmap.xml  penpal-extension.example.ts  penpal-ingest-tool.example.ts
penpal/: __init__.py  __main__.py  advisor.py  api.py  cli.py  context.py  doctor.py  ingest.py  mcp_server.py  models.py  module_cli.py  nmap_parser.py  playbooks.py  recommendations.py  runner.py  scan_profiles.py  scope.py  service_modules.py  sources.py  summary.py  workspace.py
playbooks/: README.md  TEMPLATE.md  http-vhosts-hidden-apps.json  ldap-kerberos-ad-context.json  smb-shares-configs-credentials.json  snmp-mail-remote.json
scripts/: check-mcp.py  check-pi.mjs  check.py  release_check.py  setup-pi.ps1  setup-pi.sh
tests/: test_api.py  test_cli.py  test_context.py  test_contracts.py  test_evals.py  test_ingest.py  test_ingest_fixtures.py  test_mcp_evals.py  test_nmap_parser.py  test_playbooks.py  test_release.py  test_runner.py  test_scope.py  test_service_modules.py  test_source_seeds.py  test_sources.py  test_workspace.py
tests/fixtures/evals/: cases.json
tests/fixtures/ingest/: cases.json  configuration-noise.txt  feroxbuster.txt  nmap-grepable.txt  snmpwalk.txt
tests/fixtures/mcp/: evaluations.xml
