[project]
name = "penpal"
version = "0.1.0"
description = "Backend-first enumeration assistant for authorized pentesters."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff==0.15.20"]

[project.scripts]
penpal = "penpal.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["penpal*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
