[project]
name = "penpal"
version = "0.2.0rc1"
description = "Backend-first enumeration assistant for authorized pentesters."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Yousif Nazhat"}]
keywords = ["authorized-security", "enumeration", "pentesting", "pi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yousifnazhat/penpal"
Issues = "https://github.com/yousifnazhat/penpal/issues"
Changelog = "https://github.com/yousifnazhat/penpal/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build==1.3.0", "ruff==0.15.20"]

[project.scripts]
penpal = "penpal.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["penpal*"]

[tool.setuptools.package-data]
penpal = ["data/*.json"]

[tool.setuptools.data-files]
"share/penpal/playbooks" = ["playbooks/*.json"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
